MGNLUI-89 fixed header font and color, fixed checkbox text caption visibility in pulse messages

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/styles.css
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/styles.css
@@ -105,7 +105,8 @@ button.btn-dialog-selectCallBack {
 .v-checkbox > label,
 .gwt-CheckBox > label {
     display:inline-block;
-    width:15px;
+    padding-left: 15px;
+    min-width:15px;
     height:15px;
     margin:-2px 0 0 -2px;
 }
